[package]
name = "taco_sender"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dotenvy = { version="0.15.7", default-features = false }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"]}
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "default-tls", "multipart", "json"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = {version = "1.0.145", default-features = false }
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
